# ukbFound

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: demo_UKB_tokens.csv  demo_results_diabetes.csv  missing_field_id.csv
examples/: 01_quickstart.ipynb  02_tokenisation.ipynb  run_demo.py.py
model/: demo_config.json  demo_vocab.json
tutorials/: APP3.prediction.ipynb  App1.stratification.ipynb  App2.correlation.ipynb  UKB-tokenization.ipynb  pre-train.py
ukbfound/: __init__.py  loss.py  pre-train.py  preprocess.py  trainer.py
ukbfound/model/: __init__.py  model.py
ukbfound/tokenizer/: __init__.py  trait_tokenizer.py
ukbfound/utils/: util.py
